# hipaa_rag

./: .env.example  README.md  docker-compose.yml
app/: Dockerfile  api.py  ingest.py  pyproject.toml  rag_graph.py
nginx/: nginx.conf
ui/: Dockerfile  pyproject.toml  streamlit_app.py
