[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "dbashkirov",email = "bashkirovdp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "openai (>=1.91.0,<2.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "langchain-community (>=0.3.26,<0.4.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "pypdf (>=5.6.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
